--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-sm navbar-light mb-1">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="">Channabasava Chola Resume</a>
+                <a class="nav-link" href="">abdullah yahya muaad</a>
             </li>
         </ul>
     </nav>
